# fast-api

./: README.md
FastAPI-Book/: main.py  pyproject.toml
FastAPI-Book/app/models/: events.py  users.py
FastAPI-Book/app/routes/: events.py  users.py
FastAPI-Practice/: pyproject.toml
FastAPI-Practice/src/: main.py
FastAPI-Practice/src/core/: exception_handlers.py
FastAPI-Practice/src/core/authentication/: basic_auth.py  hashing.py  jwt.py
FastAPI-Practice/src/core/database/: connection.py
FastAPI-Practice/src/products/: request.py  response.py  router.py
FastAPI-Practice/src/users/: models.py  request.py  response.py  router.py
FastAPI_test/: api.py  pyproject.toml
